update allowed origins